add get all users endpoint
