# docs/swagger.yaml
@@ -332,6 +332,25 @@ paths:
       summary: Adds an attendee to an event
       tags:
       - attendees
+  /api/v1/users:
+    get:
+      consumes:
+      - application/json
+      description: Returns all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/database.User'
+            type: array
+      security:
+      - BearerAuth: []
+      summary: Returns all users
+      tags:
+      - users
 securityDefinitions:
   BearerAuth:
     description: Enter your bearer token in the format **Bearer &lt;token&gt;**
